Candyclone: Multipage Template

--- a/sozi-candyline/step-03-cubes/candyline-cubes-presenter.sozi.html
+++ b/sozi-candyline/step-03-cubes/candyline-cubes-presenter.sozi.html
@@ -81,7 +81,7 @@
     <body>
         <div class="sozi-frame-preview">
             <div class="sozi-current-frame-container">
-                <iframe class="sozi-current-frame" src="candyline-cubes.sozi.html"></iframe>
+                <iframe class="sozi-current-frame" src="candyline-title.sozi.html"></iframe>
             </div>
             <div class="sozi-controls">
                 <input type="button" id="sozi-previous-btn" value="&laquo;" title="Previous">
@@ -89,8 +89,8 @@
                 <input type="button" id="sozi-next-btn" value="&raquo;" title="Next">
             </div>
             <div class="sozi-frame-previews-prev-next">
-                <iframe class="sozi-previous-frame" src="candyline-cubes.sozi.html"></iframe>
-                <iframe class="sozi-next-frame"     src="candyline-cubes.sozi.html"></iframe>
+                <iframe class="sozi-previous-frame" src="candyline-title.sozi.html"></iframe>
+                <iframe class="sozi-next-frame"     src="candyline-title.sozi.html"></iframe>
             </div>
         </div>
         <div class="sozi-notes">
